# Audiody

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/api/: goauth.rs  librivox.rs  mod.rs  types.rs  webapi.rs  webimage.rs  yt.rs
src/audio/: audios.rs  mod.rs
src/storage/: mod.rs  save.rs  saved.rs  setup.rs
ui/: app-window.slint
ui/components/: book.slint  navigation.slint  playback.slint
ui/views/: book.slint  home.slint  loading.slint  search.slint
