[package]
name = "Audiody"
version = "1.9.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "audiody_lib"

[[bin]]
path = "src/main.rs"
name = "audiody"

[dependencies]
slint = { version = "1.6", features = ["serde", "backend-android-activity-06"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = "1.8.0"