[package]
name = "Audiody"
version = "1.9.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "audiody_lib"

[[bin]]
path = "src/main.rs"
name = "audiody"

[dependencies]
slint = { version = "1.6", features = ["serde", "backend-android-activity-06"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
thiserror = "2.0.3"
scraper = "0.21.0"
image = "0.24.6"
ureq = "2.10.1"
rusty_ytdl = "0.7.4"
rodio = "0.20.1"
opendal = "0.50.2"
oauth2 = "4.4.2"
dirs = "5.0.1"
yt-dlp = {version = "1.2.3", features = ["tracing"] }
webp = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = "1.8.0"
